// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UnorderedList /> can have a list style 1`] = `
.c2 {
  position: relative;
  line-height: 1.5;
  word-wrap: break-word;
  font-size: 1rem;
  -webkit-letter-spacing: -0.8px;
  -moz-letter-spacing: -0.8px;
  -ms-letter-spacing: -0.8px;
  letter-spacing: -0.8px;
  font-weight: 400;
}

.c2::before {
  display: block;
  position: absolute;
  left: -2rem;
  font-family: TELUS Core Icons;
  line-height: 1.6rem;
  content: '';
  background-image: url(data:image/svg+xml;base64,PHN2ZyB2aWV3Qm94PSIwIDAgMTAwIDEwMCIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj4gIDxjaXJjbGUgY3g9IjUwIiBjeT0iNTAiIHI9IjUwIiBmaWxsPSIjNGIyODZkIiAvPjwvc3ZnPg==);
  color: #4b286d;
  background-repeat: no-repeat;
  background-size: 100% 100%;
  width: 0.32rem;
  height: 0.32rem;
  top: 0.65rem;
}

.c1 {
  padding-left: 3rem;
}

.c1 .c0 {
  margin-top: 1rem;
  margin-bottom: 0.5rem;
}

.c1 :last-child .c0 {
  margin-bottom: 0;
}

<UnorderedList
  listStyle="circle"
  size="medium"
>
  <Styled(Box)
    between={2}
    tag="ul"
  >
    <StyledComponent
      between={2}
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "c0",
            "isStatic": true,
            "lastClassName": "c1",
            "rules": Array [
              "& {
  padding-left: 3rem;
} & & {
  margin-top: 1rem; margin-bottom: 0.5rem;
} & :last-child & {
  margin-bottom: 0;
}",
            ],
          },
          "displayName": "Styled(Box)",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "c0",
          "target": [Function],
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      tag="ul"
    >
      <Box
        between={2}
        className="c0 c1"
        inline={false}
        tag="ul"
      >
        <ul
          className="TDS_Box-modules__betweenBottomMargin-2___31zX_ TDS_Box-modules__stack___33m4D c0 c1"
        >
          <UnorderedList.Item
            key=".$.0"
            listStyle="circle"
            size="medium"
          >
            <UnorderedItem__StyledUnorderedItem
              listStyle="circle"
              size="medium"
            >
              <StyledComponent
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "UnorderedItem__StyledUnorderedItem-sc-1sy38gy-0",
                      "isStatic": false,
                      "lastClassName": "c2",
                      "rules": Array [
                        [Function],
                      ],
                    },
                    "displayName": "UnorderedItem__StyledUnorderedItem",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "UnorderedItem__StyledUnorderedItem-sc-1sy38gy-0",
                    "target": "li",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
                listStyle="circle"
                size="medium"
              >
                <li
                  className="c2"
                  size="medium"
                >
                  Lorem ipsum
                </li>
              </StyledComponent>
            </UnorderedItem__StyledUnorderedItem>
          </UnorderedList.Item>
          <UnorderedList.Item
            key=".$.2"
            listStyle="circle"
            size="medium"
          >
            <UnorderedItem__StyledUnorderedItem
              listStyle="circle"
              size="medium"
            >
              <StyledComponent
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "UnorderedItem__StyledUnorderedItem-sc-1sy38gy-0",
                      "isStatic": false,
                      "lastClassName": "c2",
                      "rules": Array [
                        [Function],
                      ],
                    },
                    "displayName": "UnorderedItem__StyledUnorderedItem",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "UnorderedItem__StyledUnorderedItem-sc-1sy38gy-0",
                    "target": "li",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
                listStyle="circle"
                size="medium"
              >
                <li
                  className="c2"
                  size="medium"
                >
                  Dolor sit amet
                </li>
              </StyledComponent>
            </UnorderedItem__StyledUnorderedItem>
          </UnorderedList.Item>
        </ul>
      </Box>
    </StyledComponent>
  </Styled(Box)>
</UnorderedList>
`;

exports[`<UnorderedList /> can have a list style 2`] = `
.c2 {
  position: relative;
  line-height: 1.5;
  word-wrap: break-word;
  font-size: 1rem;
  -webkit-letter-spacing: -0.8px;
  -moz-letter-spacing: -0.8px;
  -ms-letter-spacing: -0.8px;
  letter-spacing: -0.8px;
  font-weight: 400;
}

.c2::before {
  display: block;
  position: absolute;
  left: -2rem;
  font-family: TELUS Core Icons;
  line-height: 1.6rem;
  content: '\\f104';
  font-size: 1rem;
  width: 0.75rem;
  color: #c12335;
}

.c1 {
  padding-left: 3rem;
}

.c1 .c0 {
  margin-top: 1rem;
  margin-bottom: 0.5rem;
}

.c1 :last-child .c0 {
  margin-bottom: 0;
}

<UnorderedList
  listStyle="x"
  size="medium"
>
  <Styled(Box)
    between={2}
    tag="ul"
  >
    <StyledComponent
      between={2}
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "c0",
            "isStatic": true,
            "lastClassName": "c1",
            "rules": Array [
              "& {
  padding-left: 3rem;
} & & {
  margin-top: 1rem; margin-bottom: 0.5rem;
} & :last-child & {
  margin-bottom: 0;
}",
            ],
          },
          "displayName": "Styled(Box)",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "c0",
          "target": [Function],
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      tag="ul"
    >
      <Box
        between={2}
        className="c0 c1"
        inline={false}
        tag="ul"
      >
        <ul
          className="TDS_Box-modules__betweenBottomMargin-2___31zX_ TDS_Box-modules__stack___33m4D c0 c1"
        >
          <UnorderedList.Item
            key=".$.0"
            listStyle="x"
            size="medium"
          >
            <UnorderedItem__StyledUnorderedItem
              listStyle="x"
              size="medium"
            >
              <StyledComponent
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "UnorderedItem__StyledUnorderedItem-sc-1sy38gy-0",
                      "isStatic": false,
                      "lastClassName": "c2",
                      "rules": Array [
                        [Function],
                      ],
                    },
                    "displayName": "UnorderedItem__StyledUnorderedItem",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "UnorderedItem__StyledUnorderedItem-sc-1sy38gy-0",
                    "target": "li",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
                listStyle="x"
                size="medium"
              >
                <li
                  className="c2"
                  size="medium"
                >
                  Lorem ipsum
                </li>
              </StyledComponent>
            </UnorderedItem__StyledUnorderedItem>
          </UnorderedList.Item>
          <UnorderedList.Item
            key=".$.2"
            listStyle="x"
            size="medium"
          >
            <UnorderedItem__StyledUnorderedItem
              listStyle="x"
              size="medium"
            >
              <StyledComponent
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "UnorderedItem__StyledUnorderedItem-sc-1sy38gy-0",
                      "isStatic": false,
                      "lastClassName": "c2",
                      "rules": Array [
                        [Function],
                      ],
                    },
                    "displayName": "UnorderedItem__StyledUnorderedItem",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "UnorderedItem__StyledUnorderedItem-sc-1sy38gy-0",
                    "target": "li",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
                listStyle="x"
                size="medium"
              >
                <li
                  className="c2"
                  size="medium"
                >
                  Dolor sit amet
                </li>
              </StyledComponent>
            </UnorderedItem__StyledUnorderedItem>
          </UnorderedList.Item>
        </ul>
      </Box>
    </StyledComponent>
  </Styled(Box)>
</UnorderedList>
`;

exports[`<UnorderedList /> renders 1`] = `
.c2 {
  position: relative;
  line-height: 1.5;
  word-wrap: break-word;
  font-size: 1rem;
  -webkit-letter-spacing: -0.8px;
  -moz-letter-spacing: -0.8px;
  -ms-letter-spacing: -0.8px;
  letter-spacing: -0.8px;
  font-weight: 400;
}

.c2::before {
  display: block;
  position: absolute;
  left: -2rem;
  font-family: TELUS Core Icons;
  line-height: 1.6rem;
  content: '';
  background-image: url(data:image/svg+xml;base64,PHN2ZyB2aWV3Qm94PSIwIDAgMTAwIDEwMCIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj4gIDxjaXJjbGUgY3g9IjUwIiBjeT0iNTAiIHI9IjUwIiBmaWxsPSIjNGIyODZkIiAvPjwvc3ZnPg==);
  color: #4b286d;
  background-repeat: no-repeat;
  background-size: 100% 100%;
  width: 0.32rem;
  height: 0.32rem;
  top: 0.65rem;
}

.c1 {
  padding-left: 3rem;
}

.c1 .c0 {
  margin-top: 1rem;
  margin-bottom: 0.5rem;
}

.c1 :last-child .c0 {
  margin-bottom: 0;
}

<ul
  class="TDS_Box-modules__betweenBottomMargin-2___31zX_ TDS_Box-modules__stack___33m4D c0 c1"
>
  <li
    class="c2"
  >
    Lorem ipsum
  </li>
  <li
    class="c2"
  >
    Dolor sit amet
  </li>
</ul>
`;
